# language-Quack-v2

./: .gitignore  CMakeLists.txt  a.out  file.qk  tmp.ll
include/: AST.hpp  ASTNodes.def  ASTVisitor.hpp  Builtin.hpp  ClassCodeGen.h  ClassVerifier.hpp  ClassesChecker.hpp  ClassesCodeGen.hpp  CodeGenerator.hpp  CompoundStmtChecker.hpp  CompoundStmtCodeGen.hpp  Environment.hpp  EnvironmentBuilder.hpp  Exception.hpp  ExprTypeChecker.hpp  FnCodeGen.hpp  IRType.hpp  Json.hpp  LLVMType.hpp  Location.hpp  NestedEnvironment.hpp  ParserDriver.hpp  PrintVisitor.hpp  QType.hpp  QTypeDB.hpp  QuickTokenizer.hpp  RDParser.hpp  Runtime.h  StmtTypeChecker.h  StmtVerifier.h  StmtVerifier.hpp  Type.hpp  TypeChecker.hpp  TypeCodeGen.hpp  TypeInfo.hpp  Utils.hpp
quack-builtins/: a.out  builtins.ll  main.c  main.ll  quack_runtime.c  quack_runtime.h  quack_runtime.h.gch  quack_runtime.ll  quack_runtime.s  solution1.c  solution2.c  test.c  test.ll  test_quack_runtime.c  test_quack_runtime.ll
samples/: SimpleTree.ll  SimpleTree.qk  TypeCase.ll  TypeCase.qk  lowestCommonAncestor.ll  lowestCommonAncestor.qk  pt.ll  pt.qk
src/: AST.cpp  Builtin.cpp  CMakeLists.txt  ClassCodeGen.cpp  ClassVerifier.cpp  ClassesChecker.cpp  ClassesCodeGen.cpp  CodeGenerator.cpp  CompoundStmtChecker.cpp  CompoundStmtCodeGen.cpp  Environment.cpp  EnvironmentBuilder.cpp  ExprTypeChecker.cpp  FnCodeGen.cpp  IRType.cpp  LLVMType.cpp  Lexer.lpp  Parser.ypp  ParserDriver.cpp  PrintVisitor.cpp  QType.cpp  QTypeDB.cpp  QuickTokenizer.cpp  RDParser.cpp  Runtime.cpp  StmtTypeChecker.cpp  Type.cpp  TypeChecker.cpp  TypeCodeGen.cpp  TypeInfo.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/builtin_type/object/: object.qk
test/class/: class.qk  class_method_override
test/comp_stmt/: environment.qk  if_env.qk
test/single_stmt/: nested_if_while.qk  while_stmt.qk
test/single_stmt/assign/: assignment_stmt.qk  vardecl_stmt.qk
test/single_stmt/binop_float/: binop_stmt_add.qk  binop_stmt_div.qk  binop_stmt_equal.qk  binop_stmt_less.qk  binop_stmt_less_equal.qk  binop_stmt_more.qk  binop_stmt_more_equal.qk  binop_stmt_mul.qk  binop_stmt_not_equal.qk
test/single_stmt/binop_integer/: binop_stmt_add.qk  binop_stmt_div.qk  binop_stmt_equal.qk  binop_stmt_less.qk  binop_stmt_less_equal.qk  binop_stmt_mod.qk  binop_stmt_more.qk  binop_stmt_more_equal.qk  binop_stmt_mul.qk  binop_stmt_not_equal.qk
test/single_stmt/if/: if_elif_else_stmt.qk  if_elif_else_stmt2.qk  if_else_stmt.qk  if_stmt.qk
test/single_stmt/unop/: unop_stmt_neg.qk  unop_stmt_not.qk
test/small_program/: boxed_int.qk
test/string/: string.qk
